--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,50 @@
     <string name="dubai_mall">Urban Bar <br></br>Kitchen- UBK</string>
     <string name="al_qaim">Al Mansalauun</string>
     <string name="drink_on">First drink on the house</string>
-    <string name="pizza"><![CDATA[Broccoli pizza & pasta]]></string>
+    <string name="pizza">Broccoli pizza &amp; pasta</string>
     <string name="off">50% off</string>
     <string name="buy_one_get">Buy 1 get 1</string>
+    <string name="reedemoffer">Redeem offer</string>
+    <string name="enter_vendorcode">Please enter vendor verification code.</string>
+    <string name="reedm">Redeem</string>
+    <string name="reating">3 Ratings</string>
+    <string name="happy_hourse">Happy hours</string>
+    <string name="buy_two_get_one">Buy 2 and get one drink free</string>
+    <string name="applicable_onselectitem">Applicable on selected items</string>
+    <string name="code_coupon">KQI2817KD</string>
+    <string name="show_reception">Please show this at the reception</string>
+    <string name="copy_coupon">Copy Coupon code</string>
+    <string name="unlock_raza">Unlock with Rezq Plus</string>
+    <string name="upto_50_off">Upto 50% off on special items</string>
+    <string name="premium_members_only">Available for premium members only</string>
+    <string name="reedemoffer2">REDEEM OFFER </string>
+    <string name="save_in_recent">Save in recent</string>
+    <string name="rate_your_exp">Rate your experience at</string>
+    <string name="comments">Comments (optional)</string>
+    <string name="submit">submit</string>
+    <string name="all_locked_offer">All locked Offers</string>
+    <string name="rezq_plus_offer">Rezq Plus offers</string>
+    <string name="prime_members">Become a prime member<br></br>To unlock offers</string>
+    <string name="prime_offer">Rezq prime offers</string>
+    <string name="dinner">Dinner | Takeaway | Bar</string>
+    <string name="dubai_marina">Carlucciao\'s- Dubai Marina mall</string>
+    <string name="Favourite">Favourite</string>
+    <string name="address">Address</string>
+    <string name="Neque_porro">Neque porro quisquam est qui<br></br>dolorem ipsum quia dolor.</string>
+    <string name="open_map">Open map</string>
+    <string name="offers">Offers</string>
+    <string name="seeall_locked_offer">See all Locked offers</string>
+    <string name="ratings">Ratings &amp; Reviews</string>
+    <string name="years_ago">7 months ago</string>
+    <string name="description">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
+    <string name="popular_foods">Popular in foods</string>
+    <string name="most_visited">Most Visited</string>
+    <string name="pizza_pasta">Broccoli Pizza &amp; Pasta</string>
+    <string name="one_offers">12 offers</string>
+    <string name="start_typing">Start typing</string>
+    <string name="recent_search">Recent Searches</string>
+    <string name="clear">Clear all</string>
+    <string name="fishland">Fish Land</string>
+    <string name="recent_visited">Recently Visited</string>
+    <string name="top_offers">Top offers &amp; deals</string>
 </resources>
