--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="get_offer">Get best offers before others</string>
     <string name="unblock_daily">Unlock 2 deals a day</string>
     <string name="marina">Carlucciao\'s- Dubai Marina mall</string>
-    <string name="off_percent">10% off on total bill</string>
+    <string name="off_percent"></string>
     <string name="dubai_mall">Urban Bar <br></br>Kitchen- UBK</string>
     <string name="al_qaim">Al Mansalauun</string>
     <string name="drink_on">First drink on the house</string>
@@ -439,11 +439,26 @@
     <string name="search_phrase_missing">Type something to search</string>
     <string name="save_and_update"><![CDATA[Save & Update]]></string>
     <string name="edit_profile">Edit Profile</string>
-    <string name="enter_mendatory_field">*Please eneter mendatory fields</string>
+    <string name="enter_mendatory_field">*Please enter mandatory fields</string>
     <string name="updating_profile">Updating profile...</string>
     <string name="month">Month</string>
     <string name="days">Days</string>
     <string name="no_offer_available">NO OFFERS AVAILABLE NOW</string>
     <string name="no_recent_coupons">"No Recent Coupons Available "</string>
+    <string name="please_give_a_comment">Please give feedback</string>
+    <string name="thankyou_for_eedback">Thank You for you feedback</string>
+    <string name="no_favourite_item">"No Favourite Items Available "</string>
+    <string name="get_gold_membership"><![CDATA[Become a gold member &amp; unlock exciting offers]]></string>
+    <string name="in">in</string>
+    <string name="free">FREE</string>
+    <string name="profile_updated_success">Profile Updated Successfully</string>
+    <string name="hello_there">Hello There!</string>
+    <string name="sub_title">Looks like you are new here. Register with us, Great offers awaits you.</string>
+    <string name="ok_sure">Ok, Sure</string>
+    <string name="ok_thanks">No Thanks</string>
+    <string name="golde_membership"><![CDATA[Become a gold member & unlock exciting offers]]></string>
+    <string name="wrong_coupon">Please enter a valid Coupon</string>
+    <string name="scroll_right_toseeMore">Scroll right to see more</string>
+    <string name="kilometer">Km</string>
 
 </resources>
