--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -337,7 +337,7 @@
     <string name="go_to_home">Go To Home</string>
     <string name="your_password">Your Password</string>
     <string name="appointment">Appointments</string>
-    <string name="account">Account</string>
+    <string name="account">My Account</string>
     <string name="confirmed">Confirmed</string>
     <string name="date">Date</string>
     <string name="time">Time</string>
